# FIVM

./: .gitignore  .gitmodules
examples/: CMakeLists.txt  CustomHashmapSizes.txt  compareOutput.py  config_definition.txt  custom_hashmap.zsh  generate_excel.py  generate_graphs.py  generate_plot_ex1.py  generate_plot_ex11.py  generate_plot_ex1_retailer.py  generate_plot_ex1_tpch.py  generate_plot_ex2.py  generate_plot_ex3.py  generate_plot_ex4.py  generate_plot_ex5.py  generate_plot_ex6.py  generate_plot_ex7.py  generate_plot_ex8.py  generate_plot_ex9.py  generate_single_plot.py  makefile  memory_logger.zsh  output_combined.txt  run_all.sh  run_all.zsh  run_batch_sizes.zsh  run_cavier.zsh  run_map_types.zsh  run_params.txt
examples/cavier/: run.sh
examples/data/simple/: R1.tbl  R2.tbl  R3.tbl  R4.tbl
examples/output/: config.txt  output.txt  output_10.txt  output_batch_sizes_2.txt  output_batch_sizes_2_hash.txt  output_exp1.txt  output_exp11.txt  output_exp2.txt  output_exp3.txt  output_exp4.txt  output_exp5.txt  output_exp7.txt  output_exp8.txt  output_exp9.txt  output_fixed_hashmap_complete.txt  output_no_cav.txt  output_raw_custom_hash_10.txt  output_testing.txt  output_unordered.txt  retailer_6_7_broken.txt
examples/output/hashmap/: output_fixed_hashmap_complete.txt
examples/queries/favorita/: favorita.txt  favorita_regression_categorical.sql  favorita_regression_categorical_general.sql  favorita_regression_continuous.sql  favorita_regression_continuous_general.sql
examples/queries/housing/: housing_avg.sql  (+2 more)
examples/src/: main.cpp  result_enumeration.cpp
(+201 files in other folders)
